--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         animation: fall linear infinite;
     }
     .image-bg {
-        background-image: url('bg.png'); /* Replace with your image URL */
+        background-image: url('/bg.png'); /* Replace with your image URL */
         background-size: cover; /* Ensures the image covers the entire screen */
         background-position: center; /* Centers the image */
         background-repeat: no-repeat; /* Prevents tiling */
