--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="bananas" class="fixed inset-0 pointer-events-none overflow-hidden"></div>
 <div class="container mx-auto px-4 pt-8">
     <div class="text-center mb-12">
-        <img id="logo" src="munky.webp" alt="CatWifBanana Logo" class="mx-auto w-32 h-32 rounded-full shadow-lg mb-4">
+        <img id="logo" src="munky.webp" alt="Munky Logo" class="mx-auto w-32 h-32 rounded-full shadow-lg mb-4">
         <h1 class="text-4xl font-bold mb-2">Munky</h1>
         <p class="text-xl text-gray-600">Reject humanity, return to $Munky 🐒</p>
     </div>
