--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         z-index: 0;
         animation: fall linear infinite;
     }
-    .image-bg {
+    .gradient-bg {
         background-image: url('/public/bg.png'); /* Replace with your image URL */
         background-size: cover; /* Ensures the image covers the entire screen */
         background-position: center; /* Centers the image */
