--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,12 @@
         animation: fall linear infinite;
     }
     .gradient-bg {
-        background-image: url('bg.png'); /* Replace with your image URL */
-        background-size: cover; /* Ensures the image covers the entire screen */
-        background-position: center; /* Centers the image */
-        background-repeat: no-repeat; /* Prevents tiling */
-        min-height: 100vh; /* Ensures it covers the full screen height */
-    }
+    background: linear-gradient(180deg, #3e1d1b 0%, #6e4b3b 100%); /* Darker brown gradient */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100vh; /* Ensures it covers the full screen height */
+}
     .stat-card {
         background: #f8f1e1; /* soft light brown */
         border-radius: 0.5rem;
