--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
         z-index: 0;
         animation: fall linear infinite;
     }
+    .gradient-bg {
     background: linear-gradient(180deg, #3e1d1b 0%, #6e4b3b 100%); /* Darker brown gradient */
     background-size: cover;
     background-position: center;
