--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
         z-index: 0;
         animation: fall linear infinite;
     }
-    .gradient-bg {
-    background: linear-gradient(180deg, #3e1d1b 0%, #6e4b3b 100%); /* Darker brown gradient */
+.image-bg {
+    background: linear-gradient(180deg, #d7b8a3 0%, #3e1d1b 100%); /* Gradient from light brown to dark brown */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
