--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,15 @@
     <title>Munky- Reject humanity, return to $Munky!</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
 <style>
+    /* Banana Falling Animation */
     @keyframes fall {
         0% {
             transform: translateY(-50px) rotate(0deg);
+            opacity: 0.7;
         }
         100% {
             transform: translateY(100vh) rotate(360deg);
+            opacity: 0.2;
         }
     }
     .banana {
@@ -19,7 +22,32 @@
         position: absolute;
         z-index: 0;
         animation: fall linear infinite;
+        animation-duration: 10s; /* Adjust duration for slower/faster fall */
     }
+
+    /* Background Styles */
+    body {
+        background: linear-gradient(to bottom, #F5DEB3, #D2691E);
+        background-attachment: fixed;
+        min-height: 100vh;
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+    }
+    
+    /* Optional: Add subtle noise texture to gradient */
+    body::before {
+        content: "";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0.05;
+        pointer-events: none;
+        background-image: url('data:image/svg+xml,%3Csvg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg"%3E%3Cfilter id="noiseFilter"%3E%3CfeTurbulence type="fractalNoise" baseFrequency="0.65" numOctaves="3" stitchTiles="stitch"/%3E%3C/filter%3E%3Crect width="100%" height="100%" filter="url(%23noiseFilter)"/%3E%3C/svg%3E');
+    }
+
     .image-bg {
         background-image: url('bg.png'); /* Replace with your image URL */
         background-size: cover; /* Ensures the image covers the entire screen */
@@ -27,12 +55,22 @@
         background-repeat: no-repeat; /* Prevents tiling */
         min-height: 100vh; /* Ensures it covers the full screen height */
     }
+
+    /* Stat Card Styles */
     .stat-card {
-        background: #f8f1e1; /* soft light brown */
+        background: rgba(248, 241, 225, 0.8); /* soft light brown with slight transparency */
         border-radius: 0.5rem;
         padding: 1rem;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(5px); /* Optional: adds a glass-like effect */
+        transition: all 0.3s ease;
     }
+    .stat-card:hover {
+        transform: scale(1.02);
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    }
+
+    /* Button Styles */
     .button {
         display: inline-block;
         padding: 0.75rem 1.5rem;
@@ -40,6 +78,7 @@
         font-weight: bold;
         transition: all 0.3s ease;
         text-align: center;
+        cursor: pointer;
     }
     .button-primary {
         background-color: #8B4513; /* SaddleBrown */
@@ -49,6 +88,7 @@
     .button-primary:hover {
         background-color: #A0522D; /* Sienna */
         transform: translateY(-2px);
+        box-shadow: 0 6px 8px rgba(139, 69, 19, 0.3);
     }
     .button-secondary {
         background-color: #f1e6d7; /* light beige */
@@ -60,13 +100,24 @@
         color: #fff;
         transform: translateY(-2px);
     }
-    /* Spinning animation for the logo */
+
+    /* Spinning Animation for Logo */
     @keyframes spin {
         0% { transform: rotate(0deg); }
         100% { transform: rotate(360deg); }
     }
     .spin {
         animation: spin 2s linear infinite;
+    }
+
+    /* Responsive Adjustments */
+    @media (max-width: 768px) {
+        .stat-card {
+            padding: 0.75rem;
+        }
+        .button {
+            padding: 0.5rem 1rem;
+        }
     }
 </style>
 </head>
