--- a/public/index.html
+++ b/public/index.html
@@ -22,18 +22,19 @@
         position: absolute;
         z-index: 0;
         animation: fall linear infinite;
-        animation-duration: 10s; /* Adjust duration for slower/faster fall */
+        animation-duration: 10s;
     }
 
     /* Background Styles */
     body {
-        background: linear-gradient(to bottom, #FFF4E0, #FF6B6B);
+        background: linear-gradient(to bottom, #F4E1C1, #8B4513);
         background-attachment: fixed;
         min-height: 100vh;
         margin: 0;
         padding: 0;
         overflow-x: hidden;
         font-family: 'Arial', sans-serif;
+        color: #4A2C1D;
     }
     
     /* Subtle Noise Texture */
@@ -44,42 +45,24 @@
         left: 0;
         width: 100%;
         height: 100%;
-        opacity: 0.03;
+        opacity: 0.05;
         pointer-events: none;
         background-image: url('data:image/svg+xml,%3Csvg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg"%3E%3Cfilter id="noiseFilter"%3E%3CfeTurbulence type="fractalNoise" baseFrequency="0.65" numOctaves="3" stitchTiles="stitch"/%3E%3C/filter%3E%3Crect width="100%" height="100%" filter="url(%23noiseFilter)"/%3E%3C/svg%3E');
     }
 
-    /* Image Background Option */
-    .image-bg {
-        background-image: url('bg.png');
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        min-height: 100vh;
-    }
-
     /* Stat Card Styles */
     .stat-card {
-        background: rgba(255, 255, 255, 0.7);
+        background: rgba(244, 229, 205, 0.8);
         border-radius: 0.75rem;
         padding: 1rem;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 4px 6px rgba(139, 69, 19, 0.1);
         backdrop-filter: blur(10px);
         transition: all 0.3s ease;
-        border: 1px solid rgba(255, 255, 255, 0.2);
+        border: 1px solid rgba(139, 69, 19, 0.1);
     }
     .stat-card:hover {
         transform: scale(1.03);
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-    }
-
-    /* Monkey/Cat Animation */
-    @keyframes bounce {
-        0%, 100% { transform: translateY(0); }
-        50% { transform: translateY(-10px); }
-    }
-    .cat-animation {
-        animation: bounce 2s infinite ease-in-out;
+        box-shadow: 0 6px 12px rgba(139, 69, 19, 0.2);
     }
 
     /* Button Styles */
@@ -96,44 +79,30 @@
         gap: 0.5rem;
     }
     .button-primary {
-        background-color: #FF6B6B;
-        color: white;
-        box-shadow: 0 4px 6px rgba(255, 107, 107, 0.3);
+        background-color: #8B4513; /* Saddle Brown */
+        color: #FFF4E0;
+        box-shadow: 0 4px 6px rgba(139, 69, 19, 0.3);
     }
     .button-primary:hover {
-        background-color: #FF5252;
+        background-color: #A0522D; /* Sienna */
         transform: translateY(-2px);
-        box-shadow: 0 6px 8px rgba(255, 107, 107, 0.4);
+        box-shadow: 0 6px 8px rgba(139, 69, 19, 0.4);
     }
     .button-secondary {
-        background-color: white;
-        color: #FF6B6B;
-        border: 2px solid #FF6B6B;
+        background-color: #F4E1C1;
+        color: #8B4513;
+        border: 2px solid #8B4513;
     }
     .button-secondary:hover {
-        background-color: #FF6B6B;
-        color: white;
+        background-color: #8B4513;
+        color: #FFF4E0;
         transform: translateY(-2px);
     }
 
-    /* Logo Spinning Animation */
-    @keyframes spin {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(360deg); }
-    }
-    .spin {
-        animation: spin 2s linear infinite;
-    }
-
-    /* Responsive Typography */
-    h1 {
-        font-size: 2.5rem;
-        color: #333;
-        text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
-    }
-    h2 {
-        font-size: 2rem;
-        color: #444;
+    /* Typography */
+    h1, h2 {
+        color: #4A2C1D;
+        text-shadow: 1px 1px 2px rgba(139, 69, 19, 0.1);
     }
 
     /* Responsive Adjustments */
@@ -148,20 +117,6 @@
             padding: 0.5rem 1rem;
             font-size: 0.9rem;
         }
-        h1 {
-            font-size: 2rem;
-        }
-        h2 {
-            font-size: 1.5rem;
-        }
-    }
-
-    /* Additional Hover Effects */
-    .hover-lift {
-        transition: transform 0.3s ease;
-    }
-    .hover-lift:hover {
-        transform: translateY(-5px);
     }
 </style>
 </head>
