--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,33 @@
         background-image: url('data:image/svg+xml,%3Csvg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg"%3E%3Cfilter id="noiseFilter"%3E%3CfeTurbulence type="fractalNoise" baseFrequency="0.65" numOctaves="3" stitchTiles="stitch"/%3E%3C/filter%3E%3Crect width="100%" height="100%" filter="url(%23noiseFilter)"/%3E%3C/svg%3E');
     }
 
+    /* Monkey/Cat Animation */
+    @keyframes bounce {
+        0%, 100% { transform: translateY(0) scale(1); }
+        50% { transform: translateY(-10px) scale(1.05); }
+    }
+    .cat-animation {
+        animation: bounce 2s infinite ease-in-out;
+        transition: transform 0.3s ease;
+    }
+
+    /* Logo Spinning Animation */
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
+    .spin {
+        animation: spin 2s linear infinite;
+    }
+
+    /* Additional Logo Hover Effect */
+    #logo {
+        transition: transform 0.3s ease;
+    }
+    #logo:hover {
+        transform: scale(1.1) rotate(5deg);
+    }
+
     /* Stat Card Styles */
     .stat-card {
         background: rgba(244, 229, 205, 0.8);
