--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Munky- Reject humanity, return to $Munky!</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+    <link rel="icon" type="image/webp" href="munky.webp" sizes="32x32">
+<link rel="apple-touch-icon" href="munky.webp" sizes="180x180">
+<link rel="icon" type="image/png" href="munky.webp" sizes="16x16">
 <style>
     /* Banana Falling Animation */
     @keyframes fall {
