--- a/public/index.html
+++ b/public/index.html
@@ -440,19 +440,31 @@ document.addEventListener('DOMContentLoaded', () => {
 
 
 
-        <!-- Meme Gallery -->
-        <div class="bg-white rounded-lg p-6 shadow-md mb-12">
-            <h2 class="text-2xl font-bold mb-4">Meme Gallery 🐒</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-                <div class="aspect-square bg-gray-100 rounded-lg flex items-center justify-center">
-                    <img src="/api/placeholder/300/300" alt="Meme 1" class="rounded-lg">
-                </div>
-                <div class="aspect-square bg-gray-100 rounded-lg flex items-center justify-center">
-                    <img src="/api/placeholder/300/300" alt="Meme 2" class="rounded-lg">
-                </div>
-                <div class="aspect-square bg-gray-100 rounded-lg flex items-center justify-center">
-                    <img src="/api/placeholder/300/300" alt="Meme 3" class="rounded-lg">
-                </div>
+<!-- Meme Gallery -->
+<div class="bg-white rounded-lg p-6 shadow-md mb-12">
+    <details class="w-full">
+        <summary class="cursor-pointer text-2xl font-bold mb-4 bg-gray-100 rounded-lg p-4 hover:bg-gray-200 transition duration-300">
+            Meme Gallery 🐒
+        </summary>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-4">
+            <div class="aspect-square bg-gray-100 rounded-lg flex items-center justify-center">
+                <a href="https://imgur.com/a/TVMz30z" target="_blank">
+                    <img src="https://i.imgur.com/BT0xE3h.jpg" alt="Munky Meme 1" class="rounded-lg max-w-full max-h-full object-contain hover:scale-105 transition duration-300">
+                </a>
+            </div>
+            <div class="aspect-square bg-gray-100 rounded-lg flex items-center justify-center">
+                <a href="https://imgur.com/a/TVMz30z" target="_blank">
+                    <img src="https://i.imgur.com/ZYQh1Xy.jpg" alt="Munky Meme 2" class="rounded-lg max-w-full max-h-full object-contain hover:scale-105 transition duration-300">
+                </a>
+            </div>
+            <div class="aspect-square bg-gray-100 rounded-lg flex items-center justify-center">
+                <a href="https://imgur.com/a/TVMz30z" target="_blank">
+                    <img src="https://i.imgur.com/JbOQkLq.jpg" alt="Munky Meme 3" class="rounded-lg max-w-full max-h-full object-contain hover:scale-105 transition duration-300">
+                </a>
+            </div>
+        </div>
+    </details>
+</div>
             </div>
         </div>
     </div>
