--- a/public/index.html
+++ b/public/index.html
@@ -320,7 +320,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </div>
 
         <div class="bg-white rounded-lg p-6 shadow-md mb-12">
-            <h2 class="text-2xl font-bold mb-4">Trading Activity (24h)</h2>
+            <h2 class="text-2xl font-bold mb-4">Trading Activity (Last hour)</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
                 <div class="text-center">
                     <div class="text-gray-500 mb-1">Transactions</div>
