--- a/public/index.html
+++ b/public/index.html
@@ -456,7 +456,7 @@ document.addEventListener('DOMContentLoaded', () => {
     <div id="meme-container" class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-4"></div>
 
     <div class="text-center mt-6">
-        <button id="more-memes-btn" class="bg-[#D2691E] text-white px-8 py-3 rounded-lg hover:bg-[#A0522D] transition duration-300">
+        <button id="more-memes-btn" class="bg-orange-600 text-white px-8 py-3 rounded-lg hover:bg-orange-700 transition duration-300">
             More Memes
         </button>
     </div>
@@ -535,6 +535,7 @@ document.addEventListener('DOMContentLoaded', () => {
         });
     </script>
 </div>
+
 
             </div>
         </div>
