--- a/public/index.html
+++ b/public/index.html
@@ -455,11 +455,11 @@ document.addEventListener('DOMContentLoaded', () => {
 
     <div id="meme-container" class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-4"></div>
 
-    <div class="text-center mt-6">
-        <button id="more-memes-btn" class="bg-orange-600 text-white px-8 py-3 rounded-lg hover:bg-orange-700 transition duration-300">
-            More Memes
-        </button>
-    </div>
+<div class="text-center mt-6">
+    <button id="more-memes-btn" class="bg-orange-600 text-white px-8 py-3 rounded-lg hover:bg-orange-700 transition duration-300 shadow-md hover:shadow-lg">
+        More Memes
+    </button>
+</div>
 
     <!-- Modal for full-size image -->
     <div id="meme-modal" class="fixed inset-0 bg-black bg-opacity-80 z-50 hidden items-center justify-center p-4">
