--- a/public/index.html
+++ b/public/index.html
@@ -486,7 +486,7 @@ document.addEventListener('DOMContentLoaded', async function() {
         try {
             const response = await fetch('/api/memes');
             const memeFiles = await response.json(); // Expecting the server to return JSON
-            return memeFiles.filter(file => file.match(/\.(jpg|jpeg|png|gif)$/i));
+            return memeFiles.filter(file => file.match(/\.(jpg|jpeg|png|gif)$/i)) && !['1.jpg', '2.jpg', '3.jpg'].includes(file));
         } catch (error) {
             console.error('Error loading memes:', error);
             return [];
