--- a/public/index.html
+++ b/public/index.html
@@ -212,12 +212,12 @@ document.addEventListener('DOMContentLoaded', () => {
         
         <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-8">
             <div class="stat-card">
-                <div class="text-sm text-gray-500">Price</div>
+                <div class="text-sm text-gray-500">Price (24h)</div>
                 <div class="text-xl font-bold" id="price">Loading...</div>
                 <div class="text-sm text-red-500" id="price-change">Loading...</div>
             </div>
             <div class="stat-card">
-                <div class="text-sm text-gray-500">24h Volume</div>
+                <div class="text-sm text-gray-500">24h Volume (24h)</div>
                 <div class="text-xl font-bold" id="volume">Loading...</div>
             </div>
             <div class="stat-card">
@@ -225,7 +225,7 @@ document.addEventListener('DOMContentLoaded', () => {
                 <div class="text-xl font-bold" id="liquidity">Loading...</div>
             </div>
             <div class="stat-card">
-                <div class="text-sm text-gray-500">Market Cap (FDV)</div>
+                <div class="text-sm text-gray-500">Market Cap ((24h))</div>
                 <div class="text-xl font-bold" id="marketcap">Loading...</div>
             </div>
         </div>
