--- a/public/index.html
+++ b/public/index.html
@@ -225,7 +225,7 @@ document.addEventListener('DOMContentLoaded', () => {
                 <div class="text-xl font-bold" id="liquidity">Loading...</div>
             </div>
             <div class="stat-card">
-                <div class="text-sm text-gray-500">Market Cap ((24h))</div>
+                <div class="text-sm text-gray-500">Market Cap (24h)</div>
                 <div class="text-xl font-bold" id="marketcap">Loading...</div>
             </div>
         </div>
